<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.leaves.LocalNotificationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/notificationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#616161"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/notificationSmallText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/short_message"
            app:counterEnabled="true"
            app:counterMaxLength="75">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#616161" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bigEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/descriptive_message"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:paddingHorizontal="15dp"
            android:textColorHint="#757575" />

        <Button
            android:id="@+id/notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/click_to_notify" />

        <Button
            android:id="@+id/clearAllNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_all_notification" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/showBigText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minHeight="48dp"
            android:text="@string/show_descriptive_message" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/showTimedNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minHeight="48dp"
            android:text="@string/show_timed_notification" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/TapActionswitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_tap_action"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/UpdateOnChangeswitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minHeight="48dp"
            android:text="@string/update_on_change" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/singleNotificationSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minHeight="48dp"
            android:text="@string/show_last_notification_only" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/showAdditionalImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minHeight="48dp"
            android:text="@string/show_additional_image" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/showAdditionalImageExpandable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minHeight="48dp"
            android:text="@string/show_image_expandable" />
    </LinearLayout>
</ScrollView>