<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".fragments.leaves.SqlLiteDatabaseFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/here_you_can_enter_the_delicious_ice_cream_fact"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/factNoLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/fact_number_d"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/factTitleLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/yummy_fact_title" />

            <EditText
                android:id="@+id/factTitleEBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/factsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/delectable_and_sweet_facts"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/factsEBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/facts"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textCapSentences"
                android:minHeight="48dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/boarder"
                android:backgroundTint="@color/gray"
                android:padding="5dp"
                android:text="@string/results" />

            <Button
                android:id="@+id/submitFact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>