<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/infotochange"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_your_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_your_age"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/PreviousIntent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/Cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancle" />


</LinearLayout>