<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.leaves.SharedPreferencesFragment">

    <TextView
        android:id="@+id/previousWord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/previous_word_1_s"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nextWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/your_new_word"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/previousWord"
        app:layout_constraintStart_toStartOf="@+id/previousWord"
        app:layout_constraintTop_toBottomOf="@+id/previousWord" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/setAutoLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:minHeight="48dp"
        android:text="@string/set_auto_load"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/previousWord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextWord" />

    <LinearLayout
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/previousWord"
        app:layout_constraintStart_toStartOf="@+id/previousWord"
        app:layout_constraintTop_toBottomOf="@+id/setAutoLoad">

        <Button
            android:id="@+id/delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/delete" />

        <Button
            android:id="@+id/Save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/Show"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/show" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>