<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/card_width"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/gray"
    android:padding="10dp"
    app:cardCornerRadius="@dimen/radios_medium"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/recyclerImage"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_small_width"
            android:background="@drawable/bottom_sheet_corner"
            android:contentDescription="@string/image_of_Ice_cream"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/icecream_small1" />

        <TextView
            android:id="@+id/recyclerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/title"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recyclerDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/testString"
            android:textColor="#6D4C41"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.cardview.widget.CardView>